# OpenGL-Video-Player

./: Audioplayer.cpp  Audioplayer.h  CMakeLists.txt  Decoder.cpp  Decoder.h  FindFFMPEG.cmake  FindPulseAudio.cmake  JUtils.h  Pulseplayer.cpp  Pulseplayer.h  README.md  Renderer.cpp  Renderer.h  cave_1-4.conf  config.cfg  glv.conf  main  main.cpp  makefile  pulseaudio_sample.c
include/: Decoder.h  JUtils.h  Pulseplayer.h  Renderer.h
src/: Audioplayer.cpp  Decoder.cpp  Pulseplayer.cpp  Renderer.cpp  ffmpeg_audio_cheatsheet.cpp  main.cpp  main_local.cpp  main_server.cpp  old.cpp
